--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
 
-    <title>Hello, world!</title>
+    <title>Strona główna</title>
 </head>
 <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -22,34 +16,32 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v4.0"></script>
 
     <div class="container-fluid" style="height: 100vh">
-        <div class="row bg-secondary text-white" style="height:15%">
-            <!--<picture>-->
-            <!--<source media="(max-width: 380px)" srcset="https://pollena.com.pl/5840-thickbox_default/bialy-jelen-mydlo-naturalne-w-kostce-szare-mydlo-150-g.jpg">-->
-            <!--<source media="(max-width: 640px)" srcset="https://pl.rc-cdn.community.thermomix.com/recipeimage/qvyrc1sp-49549-783269-cfcd2-2uzub23h/1aa47b35-b705-4e2f-83a9-89b2c6a98f4d/medium/powidla-sliwkowe.jpg">-->
-            <!--<source media="(min-width: 640px)" srcset="https://b.allegroimg.com/s512/03b852/0889f0b44a4ca09e788240a3e72b">-->
-            <!--<img src="https://b.allegroimg.com/s512/03b852/0889f0b44a4ca09e788240a3e72b" alt="Trufla">-->
-            <!--</picture>-->
-            Projekt z przedmiotu Aplikacje Internetowe</br>
-            Marcin Służałek
+        <div class="row bg-secondary text-white"  style="height:15%; background:url(background-photo.jpg) no-repeat right bottom; background-size: cover">
+            <h2>Projekt z przedmiotu Aplikacje Internetowe</br>
+                Marcin Służałek</h2>
         </div>
         <div class="row" style="min-height:70%">
             <div class="col-12 col-md-4 col-xl-2 bg-light text-dark">
-                <button type="button" class="btn btn-dark btn-block"><a href="element_inercyjny.html">Symulator odpowiedzi skokowej</a></button>
-                <button type="button" class="btn btn-dark btn-block"><a href="grafika_wektorowa.html">Grafika wektorowa</a></button>
-                <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
-                <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
-                <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
-                <button type="button" class="btn btn-dark btn-block"><a href="snake.html">Snake</a></button>
-                <button type="button" class="btn btn-dark btn-block"><a href="log_wizyt.html">Log wizyt</a></button>
+                <div class="m-2">
+                    <button type="button" class="btn btn-dark btn-block"><a href="element_inercyjny.html">Symulator odpowiedzi skokowej</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="grafika_wektorowa.html">Grafika wektorowa</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="animacja.html">Animacja</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="animacja_poklatkowa.html">Animacja poklatkowa</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="draganddrop.html">Drag & Drop</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="snake.html">Snake</a></button>
+                    <button type="button" class="btn btn-dark btn-block"><a href="log_wizyt.html">Log wizyt</a></button>
+                </div>
             </div>
             <div class="col-12 col-md-8 col-xl-8">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nibh felis, gravida eu mattis nec, posuere interdum libero. Nullam volutpat, quam nec eleifend maximus, massa quam sodales odio, nec molestie ipsum quam ac nisl. Praesent maximus aliquam lorem ut molestie. Morbi nec mattis nulla, vel porta erat. Fusce urna mauris, tristique at suscipit et, faucibus nec nulla. Duis sed est sed purus convallis placerat a semper ligula. Donec rutrum non nulla eget tempus.</p>
+                <div class="m-2 text-justify">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nibh felis, gravida eu mattis nec, posuere interdum libero. Nullam volutpat, quam nec eleifend maximus, massa quam sodales odio, nec molestie ipsum quam ac nisl. Praesent maximus aliquam lorem ut molestie. Morbi nec mattis nulla, vel porta erat. Fusce urna mauris, tristique at suscipit et, faucibus nec nulla. Duis sed est sed purus convallis placerat a semper ligula. Donec rutrum non nulla eget tempus.</p>
 
-                <p>Pellentesque fringilla malesuada mattis. Proin ut aliquet justo. Quisque sagittis mauris diam, ac accumsan risus bibendum sit amet. Mauris et massa augue. Sed laoreet nec mauris id sodales. Maecenas ac consectetur mi. Fusce bibendum et purus vitae fermentum. Phasellus placerat sit amet turpis vitae efficitur. Cras sodales aliquam sem ut ullamcorper. Sed venenatis justo nec felis sodales, sit amet accumsan sem tempus. Maecenas orci diam, tincidunt vitae urna eu, egestas lobortis tortor. Vivamus at tortor ac libero bibendum cursus et sed arcu. Nunc tempus mattis dui, quis convallis augue laoreet et. Sed lacinia dui tortor, id posuere libero viverra eget. Sed ex neque, interdum sed semper a, commodo eu nisl. Maecenas in maximus nisl, in egestas lectus.</p>
+                    <p>Pellentesque fringilla malesuada mattis. Proin ut aliquet justo. Quisque sagittis mauris diam, ac accumsan risus bibendum sit amet. Mauris et massa augue. Sed laoreet nec mauris id sodales. Maecenas ac consectetur mi. Fusce bibendum et purus vitae fermentum. Phasellus placerat sit amet turpis vitae efficitur. Cras sodales aliquam sem ut ullamcorper. Sed venenatis justo nec felis sodales, sit amet accumsan sem tempus. Maecenas orci diam, tincidunt vitae urna eu, egestas lobortis tortor. Vivamus at tortor ac libero bibendum cursus et sed arcu. Nunc tempus mattis dui, quis convallis augue laoreet et. Sed lacinia dui tortor, id posuere libero viverra eget. Sed ex neque, interdum sed semper a, commodo eu nisl. Maecenas in maximus nisl, in egestas lectus.</p>
+                </div>
             </div>
             <div class="col-12 col-md-12 col-xl-2 bg-light text-dark text-center ">
                 <div class="m-2">
-                    <img src="pp-put_logo_jasne.jpg">
+                    <img src="pp-put_logo_jasne.jpg" class="m-2 w-100">
                     <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Byxlgf4oW6y/" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:100%; min-width:100%; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                         <div style="padding:16px;">
                             <a href="https://www.instagram.com/p/Byxlgf4oW6y/" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -74,7 +66,7 @@
             </div>
             <div class="col-4">
             </div>
-            <div class="col-4 text-right mt-2">
+            <div class="col-4 text-right p-2">
                 <div class="fb-page" data-href="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/" data-tabs="timeline" data-width="500" data-height="120" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
                     <blockquote cite="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/" class="fb-xfbml-parse-ignore">
                         <a href="https://www.facebook.com/KlubZeglarskiPolitechnikiPoznanskiej/">Klub Żeglarski Politechniki Poznańskiej</a>
@@ -84,32 +76,5 @@
         </div>
     </div>
 </body>
-<script>
-    function getLength() {
-        let data = document.cookie;
-        if(data == "") {
-            return 0;
-        }else{
-            let cl = data.split(';');
-            return cl.length;
-        }
-    }
-    function setCookie() {
-        let name = getLength();
-        let date = new Date();
-        date.setTime(date.getTime());
-        let exp = new Date();
-        exp.setTime(exp.getTime() + (365 * 24 * 60 * 60 * 1000));
-        let expires = "expires="+exp.toUTCString();
-        document.cookie = name + "=" + date + ";" + expires + "domain=localhost;" + "path=/;";
-        console.log(document.cookie);
-    }
-    window.onload = function() {
-        if(!sessionStorage.hasOwnProperty("active")) {
-            setCookie();
-            sessionStorage.setItem("active", "yes");
-        }
-    }
-
-</script>
+<script src="index.js"></script>
 </html>
